--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1302,7 +1302,7 @@
   "pli-tv-kd2:34.4.5": "Otherwise the resident monks should go outside the monastery zone and do the observance-day procedure there. ",
   "pli-tv-kd2:34.5.0": "34. The seeing of characteristics, etc. ",
   "pli-tv-kd2:34.5.1": "“It may happen that newly arrived monks see signs and indications of resident monks: beds and benches that are made up, water for drinking and water for washing that are ready for use, precincts that are well swept. ",
-  "pli-tv-kd2:34.5.2": "As a consequence, they think there may be resident monks there, but they’re unsure. Then—",
+  "pli-tv-kd2:34.5.2": "As a consequence, they’re unsure whether or not there are  resident monks there. Then—",
   "pli-tv-kd2:34.6.1": "If they don’t investigate, ",
   "pli-tv-kd2:34.6.2": "and they then do the observance-day procedure, ",
   "pli-tv-kd2:34.6.3": "there’s an offense of wrong conduct. ",
