--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1304,7 +1304,7 @@
   "pli-tv-kd2:34.5.1": "“It may happen that newly arrived monks see signs and indications of resident monks: beds and benches that are made up, water for drinking and water for washing that are ready for use, precincts that are well swept. ",
   "pli-tv-kd2:34.5.2": "As a consequence, they’re unsure whether or not there are  resident monks there. Then—",
   "pli-tv-kd2:34.6.1": "",
-  "pli-tv-kd2:34.6.2": "and they then do the observance-day procedure, ",
+  "pli-tv-kd2:34.6.2": "If they do the observance-day procedure without investigating, ",
   "pli-tv-kd2:34.6.3": "there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.6.4": "If they do investigate, ",
   "pli-tv-kd2:34.6.5": "but they don’t see anyone, ",
