--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1307,7 +1307,7 @@
   "pli-tv-kd2:34.6.2": "If they do the observance-day procedure without investigating, ",
   "pli-tv-kd2:34.6.3": "there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.6.4": "If they investigate, ",
-  "pli-tv-kd2:34.6.5": "but they don’t see anyone, ",
+  "pli-tv-kd2:34.6.5": "but don’t see anyone, ",
   "pli-tv-kd2:34.6.6": "and they then do the observance-day procedure, ",
   "pli-tv-kd2:34.6.7": "there’s no offense. ",
   "pli-tv-kd2:34.6.8": "If they do investigate, ",
