--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1310,7 +1310,7 @@
   "pli-tv-kd2:34.6.5": "but don’t see anyone, ",
   "pli-tv-kd2:34.6.6": "and then do the observance-day procedure, ",
   "pli-tv-kd2:34.6.7": "there’s no offense. ",
-  "pli-tv-kd2:34.6.8": "If they do investigate, ",
+  "pli-tv-kd2:34.6.8": "If they investigate, ",
   "pli-tv-kd2:34.6.9": "and they do see someone, ",
   "pli-tv-kd2:34.6.10": "and they then do the observance-day procedure together, ",
   "pli-tv-kd2:34.6.11": "there’s no offense. ",
