--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1318,7 +1318,7 @@
   "pli-tv-kd2:34.6.13": "and they see someone, ",
   "pli-tv-kd2:34.6.14": "and then do the observance-day procedure separately, ",
   "pli-tv-kd2:34.6.15": "there’s an offense of wrong conduct. ",
-  "pli-tv-kd2:34.6.16": "If they do investigate, ",
+  "pli-tv-kd2:34.6.16": "If they investigate, ",
   "pli-tv-kd2:34.6.17": "and they do see someone, ",
   "pli-tv-kd2:34.6.18": "but they think, ",
   "pli-tv-kd2:34.6.19": "ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
