--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1319,7 +1319,7 @@
   "pli-tv-kd2:34.6.14": "and then do the observance-day procedure separately, ",
   "pli-tv-kd2:34.6.15": "there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.6.16": "If they investigate, ",
-  "pli-tv-kd2:34.6.17": "and they do see someone, ",
+  "pli-tv-kd2:34.6.17": "and they see someone, ",
   "pli-tv-kd2:34.6.18": "but they think, ",
   "pli-tv-kd2:34.6.19": "ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
   "pli-tv-kd2:34.6.20": "and they then do the observance-day procedure aiming at schism, ",
