--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1334,7 +1334,7 @@
   "pli-tv-kd2:34.8.1": "“It may be that resident monks see signs and indications of newly arrived monks: an unknown almsbowl, an unknown robe, an unknown sitting mat, water poured on the ground from the washing of feet. ",
   "pli-tv-kd2:34.8.2": "As a consequence, they’re unsure whether or not monks have arrived. Then—",
   "pli-tv-kd2:34.8.3": "If they do the observance-day procedure without investigating, there’s an offense of wrong conduct. ",
-  "pli-tv-kd2:34.8.4": "If they do investigate, but they don’t see anyone, and they then do the observance-day procedure, there’s no offense. ",
+  "pli-tv-kd2:34.8.4": "If they investigate, but don’t see anyone, and then do the observance-day procedure, there’s no offense. ",
   "pli-tv-kd2:34.8.5": "If they do investigate, and they do see someone, and they then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:34.8.6": "If they do investigate, and they do see someone, and they then do the observance-day procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.8.7": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the observance-day procedure aiming at schism, there’s a serious offense. ",
