--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1337,7 +1337,7 @@
   "pli-tv-kd2:34.8.4": "If they investigate, but don’t see anyone, and then do the observance-day procedure, there’s no offense. ",
   "pli-tv-kd2:34.8.5": "If they investigate, and they see someone, and then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:34.8.6": "If they investigate, and they see someone, and then do the observance-day procedure separately, there’s an offense of wrong conduct. ",
-  "pli-tv-kd2:34.8.7": "If they do investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the observance-day procedure aiming at schism, there’s a serious offense. ",
+  "pli-tv-kd2:34.8.7": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the observance-day procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd2:34.9.1": "“It may happen that resident monks hear signs and indications of newly arrived monks: the sound of the feet of someone arriving, the sound of sandals being knocked together, the sound of coughing, the sound of sneezing. ",
   "pli-tv-kd2:34.9.2": "As a consequence, they think monks may have arrived, but they’re unsure. Then—",
   "pli-tv-kd2:34.9.3": "If they don’t investigate, and they then do the observance-day procedure, there’s an offense of wrong conduct. ",
