--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -776,7 +776,7 @@
   "pli-tv-kd4:13.1.20.0": "16. The seeing of characteristics, etc. ",
   "pli-tv-kd4:13.1.20.1": "“It may happen that newly arrived monks see signs and indications of resident monks: beds and benches that are made up, water for drinking and water for washing that are ready for use, precincts that are well swept. ",
   "pli-tv-kd4:13.1.21": "As a consequence, they’re unsure whether or not there are  resident monks there. Then—",
-  "pli-tv-kd4:13.1.22": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
+  "pli-tv-kd4:13.1.22": "If they do the invitation procedure without investigating, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.23": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
   "pli-tv-kd4:13.1.24": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.25": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
