--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -783,7 +783,7 @@
   "pli-tv-kd4:13.1.26": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.27": "“It may happen that newly arrived monks hear signs and indications of resident monks: the sound of the feet of someone doing walking meditation, the sound of recitation, the sound of coughing, the sound of sneezing. ",
   "pli-tv-kd4:13.1.28": "As a consequence, they’re unsure whether or not there are  resident monks there. Then—",
-  "pli-tv-kd4:13.1.29": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
+  "pli-tv-kd4:13.1.29": "If they do the invitation procedure without investigating, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.30": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
   "pli-tv-kd4:13.1.31": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.32": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
