--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -787,7 +787,7 @@
   "pli-tv-kd4:13.1.30": "If they investigate, but don’t see anyone, and then do the invitation procedure, there’s no offense. ",
   "pli-tv-kd4:13.1.31": "If they investigate, and they see someone, and then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.32": "If they investigate, and they see someone, and then do the invitation procedure separately, there’s an offense of wrong conduct. ",
-  "pli-tv-kd4:13.1.33": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
+  "pli-tv-kd4:13.1.33": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.34": "“It may happen that resident monks see signs and indications of newly arrived monks: an unknown almsbowl, an unknown robe, an unknown sitting mat, water poured on the ground from the washing of feet. ",
   "pli-tv-kd4:13.1.35": "As a consequence, they think monks may have arrived, but they’re unsure. Then—",
   "pli-tv-kd4:13.1.36": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
