--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -791,7 +791,7 @@
   "pli-tv-kd4:13.1.34": "“It may happen that resident monks see signs and indications of newly arrived monks: an unknown almsbowl, an unknown robe, an unknown sitting mat, water poured on the ground from the washing of feet. ",
   "pli-tv-kd4:13.1.35": "As a consequence, they’re unsure whether or not monks have arrived. Then—",
   "pli-tv-kd4:13.1.36": "If they do the invitation procedure without investigating, there’s an offense of wrong conduct. ",
-  "pli-tv-kd4:13.1.37": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
+  "pli-tv-kd4:13.1.37": "If they investigate, but don’t see anyone, and then do the invitation procedure, there’s no offense. ",
   "pli-tv-kd4:13.1.38": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.39": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.40": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
