--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -792,7 +792,7 @@
   "pli-tv-kd4:13.1.35": "As a consequence, they’re unsure whether or not monks have arrived. Then—",
   "pli-tv-kd4:13.1.36": "If they do the invitation procedure without investigating, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.37": "If they investigate, but don’t see anyone, and then do the invitation procedure, there’s no offense. ",
-  "pli-tv-kd4:13.1.38": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
+  "pli-tv-kd4:13.1.38": "If they investigate, and they see someone, and then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.39": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.40": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.41": "“It may happen that resident monks hear signs and indications of newly arrived monks: the sound of the feet of someone arriving, the sound of sandals being knocked together, the sound of coughing, the sound of sneezing. ",
