--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -797,7 +797,7 @@
   "pli-tv-kd4:13.1.40": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.41": "“It may happen that resident monks hear signs and indications of newly arrived monks: the sound of the feet of someone arriving, the sound of sandals being knocked together, the sound of coughing, the sound of sneezing. ",
   "pli-tv-kd4:13.1.42": "As a consequence, they’re unsure whether or not monks have arrived. Then—",
-  "pli-tv-kd4:13.1.43": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
+  "pli-tv-kd4:13.1.43": "If they do the invitation procedure without investigating, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.44": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
   "pli-tv-kd4:13.1.45": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.46": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
