--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -799,7 +799,7 @@
   "pli-tv-kd4:13.1.42": "As a consequence, they’re unsure whether or not monks have arrived. Then—",
   "pli-tv-kd4:13.1.43": "If they do the invitation procedure without investigating, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.44": "If they investigate, but don’t see anyone, and then do the invitation procedure, there’s no offense. ",
-  "pli-tv-kd4:13.1.45": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
+  "pli-tv-kd4:13.1.45": "If they investigate, and they see someone, and then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.46": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.47": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.48.0": "17. The doing of the invitation procedure with those belonging to a different Buddhist sect, etc. ",
