--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -801,7 +801,7 @@
   "pli-tv-kd4:13.1.44": "If they investigate, but don’t see anyone, and then do the invitation procedure, there’s no offense. ",
   "pli-tv-kd4:13.1.45": "If they investigate, and they see someone, and then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.46": "If they investigate, and they see someone, and then do the invitation procedure separately, there’s an offense of wrong conduct. ",
-  "pli-tv-kd4:13.1.47": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
+  "pli-tv-kd4:13.1.47": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.48.0": "17. The doing of the invitation procedure with those belonging to a different Buddhist sect, etc. ",
   "pli-tv-kd4:13.1.48.1": "“It may happen that newly arrived monks see resident monks who belong to a different Buddhist sect. ",
   "pli-tv-kd4:13.1.49": "But they have the view that they belong to the same Buddhist sect. In such a case: ",
