--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1365,7 +1365,7 @@
   "pli-tv-kd2:34.13.2": "But they have the view that they belong to a different Buddhist sect. Then—",
   "pli-tv-kd2:34.13.3": "If they don’t ask the newly arrived monks about it, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.13.4": "If they do ask the newly arrived monks about it, and they change their view, but then do the observance-day procedure separately, there’s an offense of wrong conduct. ",
-  "pli-tv-kd2:34.13.5": "If they do ask the newly arrived monks about it, and they change their view, and they then do the observance-day procedure together, there’s no offense. ",
+  "pli-tv-kd2:34.13.5": "If they do ask the newly arrived monks about it, and they change their view, and then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:35.1.0": "36. The section on “you shouldn’t go” ",
   "pli-tv-kd2:35.1.1": "“On an observance day you shouldn’t go from a monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd2:35.1.2": "On an observance day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
